objects/GEMS_ID_Card_Suppression__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Owner__c</fullName>
        <label>Actual Owner</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_BAs__c</fullName>
        <label>Applicable BAs</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicable_GSs__c</fullName>
        <label>Applicable GSs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Agreement</fullName>
                </value>
                <value>
                    <fullName>Group Section</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Requested_date__c</fullName>
        <label>ID Card Suppression Requested date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_Card_Suppression_Date__c</fullName>
        <label>ID Card Suppression Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_ID_Card_Case_Number__c</fullName>
        <formula>Parent_ID_Card_Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent ID Card Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_ID_Card_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent ID Card Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>ID Card Suppression / Removal Suppression</relationshipLabel>
        <relationshipName>GEMS_ID_Card_Suppressions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removal_of_ID_Card_Suppression_Date__c</fullName>
        <label>Suppression Removal Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request for Suppression</fullName>
                </value>
                <value>
                    <fullName>Suppression Completed</fullName>
                </value>
                <value>
                    <fullName>Request for Removal of Suppression</fullName>
                </value>
                <value>
                    <fullName>Removal of Suppression Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suppression_Removal_Requested_Date__c</fullName>
        <label>Suppression Removal Requested Date</label>
        <type>Date</type>
    </fields>
    <label>GEMS ID Card Suppression</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Applicable_BAs__c</columns>
        <columns>ID_Card_Requested_date__c</columns>
        <columns>ID_Card_Suppression_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IDS#{0000000}</displayFormat>
        <label>ID Card Suppression Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GEMS ID Card Suppressions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>